--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "inquirer": "^9.1.0",
+    "inquirer": "^9.1.0"
+  },
+  "devDependencies": {
     "jest": "^29.0.1"
   }
 }
