--- a/package.json
+++ b/package.json
@@ -4,5 +4,25 @@
   },
   "devDependencies": {
     "jest": "^29.0.1"
-  }
+  },
+  "name": "teamprofilegenerator",
+  "version": "1.0.0",
+  "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
+  "scripts": {
+    "test": "jest"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JaQwae/Team-Profile-Generator.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/JaQwae/Team-Profile-Generator/issues"
+  },
+  "homepage": "https://github.com/JaQwae/Team-Profile-Generator#readme",
+  "description": ""
 }
